Minor corrections in packages (moving all associations/abstractions)

--- a/OAS/tapi-notification.yaml
+++ b/OAS/tapi-notification.yaml
@@ -42,7 +42,7 @@ consumes:
 produces:
 - "application/yang-data+json"
 paths:
-  /data/tapi-common:context:
+  /data/tapi-common:context/:
     get:
       tags:
       - "tapi-common"
@@ -105,7 +105,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/name:
+  /data/tapi-common:context/name/:
     post:
       tags:
       - "tapi-common"
@@ -127,7 +127,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/name={value-name}:
+  /data/tapi-common:context/name={value-name}/:
     get:
       tags:
       - "tapi-common"
@@ -192,7 +192,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/service-interface-point:
+  /data/tapi-common:context/service-interface-point/:
     post:
       tags:
       - "tapi-common"
@@ -212,7 +212,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/service-interface-point={uuid}:
+  /data/tapi-common:context/service-interface-point={uuid}/:
     get:
       tags:
       - "tapi-common"
@@ -271,7 +271,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/service-interface-point={uuid}/available-capacity:
+  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/:
     get:
       tags:
       - "tapi-common"
@@ -290,7 +290,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/total-size:
+  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/total-size/:
     get:
       tags:
       - "tapi-common"
@@ -310,7 +310,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/name:
+  /data/tapi-common:context/service-interface-point={uuid}/name/:
     post:
       tags:
       - "tapi-common"
@@ -337,7 +337,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/service-interface-point={uuid}/name={value-name}:
+  /data/tapi-common:context/service-interface-point={uuid}/name={value-name}/:
     get:
       tags:
       - "tapi-common"
@@ -417,7 +417,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity:
+  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/:
     get:
       tags:
       - "tapi-common"
@@ -437,7 +437,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/total-size:
+  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/total-size/:
     get:
       tags:
       - "tapi-common"
@@ -457,7 +457,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-notification:notification-context:
+  /data/tapi-common:context/tapi-notification:notification-context/:
     get:
       tags:
       - "tapi-notification"
@@ -522,7 +522,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}:
+  /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/:
     get:
       tags:
       - "tapi-notification"
@@ -541,7 +541,7 @@ paths:
             $ref: "#/definitions/tapi.notification.notificationcontext.EventNotificationWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/name={value-name}:
+  /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/name={value-name}/:
     get:
       tags:
       - "tapi-notification"
@@ -567,7 +567,7 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/object-notification:
+  /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/object-notification/:
     get:
       tags:
       - "tapi-notification"
@@ -734,7 +734,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/target-object-name={value-name}:
+  /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/target-object-name={value-name}/:
     get:
       tags:
       - "tapi-notification"
@@ -759,7 +759,7 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription:
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription/:
     post:
       tags:
       - "tapi-notification"
@@ -780,7 +780,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}:
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/:
     get:
       tags:
       - "tapi-notification"
@@ -840,7 +840,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/event-notification:
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/event-notification/:
     post:
       tags:
       - "tapi-notification"
@@ -1193,7 +1193,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/name:
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/name/:
     post:
       tags:
       - "tapi-notification"
@@ -1220,7 +1220,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/name={value-name}:
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/name={value-name}/:
     get:
       tags:
       - "tapi-notification"
@@ -1300,7 +1300,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/notification-channel:
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/notification-channel/:
     get:
       tags:
       - "tapi-notification"
@@ -1346,7 +1346,7 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/notification={notification-uuid}:
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/notification={notification-uuid}/:
     get:
       tags:
       - "tapi-notification"
@@ -1490,7 +1490,7 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter:
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter/:
     post:
       tags:
       - "tapi-notification"
@@ -1516,7 +1516,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}:
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}/:
     get:
       tags:
       - "tapi-notification"
@@ -1593,7 +1593,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}/name:
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}/name/:
     post:
       tags:
       - "tapi-notification"
@@ -1720,7 +1720,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-notification:notification-context/notification={uuid}:
+  /data/tapi-common:context/tapi-notification:notification-context/notification={uuid}/:
     get:
       tags:
       - "tapi-notification"
@@ -1739,7 +1739,7 @@ paths:
             $ref: "#/definitions/tapi.notification.NotificationWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-notification:notification-context/notification={uuid}/additional-info={value-name}:
+  /data/tapi-common:context/tapi-notification:notification-context/notification={uuid}/additional-info={value-name}/:
     get:
       tags:
       - "tapi-notification"
@@ -1763,7 +1763,7 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-notification:notification-context/notification={uuid}/changed-attributes={value-name}:
+  /data/tapi-common:context/tapi-notification:notification-context/notification={uuid}/changed-attributes={value-name}/:
     get:
       tags:
       - "tapi-notification"
@@ -1787,7 +1787,7 @@ paths:
             $ref: "#/definitions/tapi.notification.NameAndValueChangeWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-notification:notification-context/notification={uuid}/name={value-name}:
+  /data/tapi-common:context/tapi-notification:notification-context/notification={uuid}/name={value-name}/:
     get:
       tags:
       - "tapi-notification"
@@ -1813,7 +1813,7 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-notification:notification-context/notification={uuid}/target-object-name={value-name}:
+  /data/tapi-common:context/tapi-notification:notification-context/notification={uuid}/target-object-name={value-name}/:
     get:
       tags:
       - "tapi-notification"
@@ -1838,7 +1838,7 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
-  /operations/tapi-common:get-service-interface-point-details:
+  /operations/tapi-common:get-service-interface-point-details/:
     post:
       tags:
       - "tapi-common"
@@ -1861,7 +1861,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-common:get-service-interface-point-list:
+  /operations/tapi-common:get-service-interface-point-list/:
     post:
       tags:
       - "tapi-common"
@@ -1875,7 +1875,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-common:update-service-interface-point:
+  /operations/tapi-common:update-service-interface-point/:
     post:
       tags:
       - "tapi-common"
@@ -1894,7 +1894,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-notification:create-notification-subscription-service:
+  /operations/tapi-notification:create-notification-subscription-service/:
     post:
       tags:
       - "tapi-notification"
@@ -1917,7 +1917,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-notification:delete-notification-subscription-service:
+  /operations/tapi-notification:delete-notification-subscription-service/:
     post:
       tags:
       - "tapi-notification"
@@ -1936,7 +1936,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-notification:get-notification-list:
+  /operations/tapi-notification:get-notification-list/:
     post:
       tags:
       - "tapi-notification"
@@ -1959,7 +1959,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-notification:get-notification-subscription-service-details:
+  /operations/tapi-notification:get-notification-subscription-service-details/:
     post:
       tags:
       - "tapi-notification"
@@ -1982,7 +1982,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-notification:get-notification-subscription-service-list:
+  /operations/tapi-notification:get-notification-subscription-service-list/:
     post:
       tags:
       - "tapi-notification"
@@ -1996,7 +1996,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-notification:get-supported-notification-types:
+  /operations/tapi-notification:get-supported-notification-types/:
     post:
       tags:
       - "tapi-notification"
@@ -2010,7 +2010,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-notification:update-notification-subscription-service:
+  /operations/tapi-notification:update-notification-subscription-service/:
     post:
       tags:
       - "tapi-notification"
