--- a/OAS/tapi-common.yaml
+++ b/OAS/tapi-common.yaml
@@ -26,7 +26,7 @@ consumes:
 produces:
 - "application/yang-data+json"
 paths:
-  /data/tapi-common:context:
+  /data/tapi-common:context/:
     get:
       tags:
       - "tapi-common"
@@ -89,7 +89,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/name:
+  /data/tapi-common:context/name/:
     post:
       tags:
       - "tapi-common"
@@ -111,7 +111,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/name={value-name}:
+  /data/tapi-common:context/name={value-name}/:
     get:
       tags:
       - "tapi-common"
@@ -176,7 +176,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/service-interface-point:
+  /data/tapi-common:context/service-interface-point/:
     post:
       tags:
       - "tapi-common"
@@ -196,7 +196,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/service-interface-point={uuid}:
+  /data/tapi-common:context/service-interface-point={uuid}/:
     get:
       tags:
       - "tapi-common"
@@ -255,7 +255,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/service-interface-point={uuid}/available-capacity:
+  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/:
     get:
       tags:
       - "tapi-common"
@@ -274,7 +274,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/total-size:
+  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/total-size/:
     get:
       tags:
       - "tapi-common"
@@ -294,7 +294,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/name:
+  /data/tapi-common:context/service-interface-point={uuid}/name/:
     post:
       tags:
       - "tapi-common"
@@ -321,7 +321,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/service-interface-point={uuid}/name={value-name}:
+  /data/tapi-common:context/service-interface-point={uuid}/name={value-name}/:
     get:
       tags:
       - "tapi-common"
@@ -401,7 +401,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity:
+  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/:
     get:
       tags:
       - "tapi-common"
@@ -421,7 +421,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/total-size:
+  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/total-size/:
     get:
       tags:
       - "tapi-common"
@@ -441,7 +441,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /operations/tapi-common:get-service-interface-point-details:
+  /operations/tapi-common:get-service-interface-point-details/:
     post:
       tags:
       - "tapi-common"
@@ -464,7 +464,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-common:get-service-interface-point-list:
+  /operations/tapi-common:get-service-interface-point-list/:
     post:
       tags:
       - "tapi-common"
@@ -478,7 +478,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-common:update-service-interface-point:
+  /operations/tapi-common:update-service-interface-point/:
     post:
       tags:
       - "tapi-common"
