--- a/OAS/tapi-streaming.yaml
+++ b/OAS/tapi-streaming.yaml
@@ -1,24 +1,8 @@
 ---
 swagger: "2.0"
 info:
-  description: "\r\n        This module contains TAPI Streaming Model definitions.\r\
-    \n        Source: TapiStreaming.uml\r\n        - The TAPI YANG models included\
-    \ in this TAPI release are a *normative* part of the TAPI SDK.\r\n        - The\
-    \ YANG specifications have been generated from the corresponding UML model using\
-    \ the [ONF EAGLE UML2YANG mapping tool]\r\n\r\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\r\
-    \n        and further edited manually to comply with the [ONF IISOMI UML2YANG\
-    \ mapping guidelines]\r\n        <https://wiki.opennetworking.org/display/OIMT/UML+-+YANG+Guidelines>\r\
-    \n        - Status of YANG model artifacts can be determined by referring to the\
-    \ corresponding UML artifacts.\r\n        As described in the UML models, some\
-    \ artifacts are considered *experimental*, and thus the corresponding YANG artifacts.\r\
-    \n        - The ONF TAPI release process does not guarantee backward compatibility\
-    \ of YANG models across major versions of TAPI releases.\r\n        The YANG model\
-    \ backward compatibility criteria are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\r\
-    \n        YANG models included in this release may not be backward compatible\
-    \ with previous TAPI releases.\r\n        Copyright (c) 2021 Open Networking Foundation\
-    \ (ONF). All rights reserved.\r\n        License: This module is distributed under\
-    \ the Apache License 2.0.,\r\n        This module contains TAPI Common Model definitions.\r\
-    \n        Source: TapiCommon.uml\r\n        - The TAPI YANG models included in\
+  description: "\r\n        This module contains TAPI Common Model definitions.\r\n\
+    \        Source: TapiCommon.uml\r\n        - The TAPI YANG models included in\
     \ this TAPI release are a *normative* part of the TAPI SDK.\r\n        - The YANG\
     \ specifications have been generated from the corresponding UML model using the\
     \ [ONF EAGLE UML2YANG mapping tool]\r\n        <https://github.com/OpenNetworkingFoundation/EagleUmlYang>\r\
@@ -33,16 +17,32 @@ info:
     \n        YANG models included in this release may not be backward compatible\
     \ with previous TAPI releases.\r\n        Copyright (c) 2021 Open Networking Foundation\
     \ (ONF). All rights reserved.\r\n        License: This module is distributed under\
+    \ the Apache License 2.0.,\r\n        This module contains TAPI Streaming Model\
+    \ definitions.\r\n        Source: TapiStreaming.uml\r\n        - The TAPI YANG\
+    \ models included in this TAPI release are a *normative* part of the TAPI SDK.\r\
+    \n        - The YANG specifications have been generated from the corresponding\
+    \ UML model using the [ONF EAGLE UML2YANG mapping tool]\r\n\r\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\r\
+    \n        and further edited manually to comply with the [ONF IISOMI UML2YANG\
+    \ mapping guidelines]\r\n        <https://wiki.opennetworking.org/display/OIMT/UML+-+YANG+Guidelines>\r\
+    \n        - Status of YANG model artifacts can be determined by referring to the\
+    \ corresponding UML artifacts.\r\n        As described in the UML models, some\
+    \ artifacts are considered *experimental*, and thus the corresponding YANG artifacts.\r\
+    \n        - The ONF TAPI release process does not guarantee backward compatibility\
+    \ of YANG models across major versions of TAPI releases.\r\n        The YANG model\
+    \ backward compatibility criteria are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\r\
+    \n        YANG models included in this release may not be backward compatible\
+    \ with previous TAPI releases.\r\n        Copyright (c) 2021 Open Networking Foundation\
+    \ (ONF). All rights reserved.\r\n        License: This module is distributed under\
     \ the Apache License 2.0."
   version: "2.1.3"
-  title: "tapi-streaming,tapi-common API"
+  title: "tapi-common,tapi-streaming API"
 host: "localhost:1234"
 consumes:
 - "application/yang-data+json"
 produces:
 - "application/yang-data+json"
 paths:
-  /data/tapi-common:context:
+  /data/tapi-common:context/:
     get:
       tags:
       - "tapi-common"
@@ -105,7 +105,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/name:
+  /data/tapi-common:context/name/:
     post:
       tags:
       - "tapi-common"
@@ -127,7 +127,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/name={value-name}:
+  /data/tapi-common:context/name={value-name}/:
     get:
       tags:
       - "tapi-common"
@@ -192,7 +192,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/service-interface-point:
+  /data/tapi-common:context/service-interface-point/:
     post:
       tags:
       - "tapi-common"
@@ -212,7 +212,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/service-interface-point={uuid}:
+  /data/tapi-common:context/service-interface-point={uuid}/:
     get:
       tags:
       - "tapi-common"
@@ -271,7 +271,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/service-interface-point={uuid}/available-capacity:
+  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/:
     get:
       tags:
       - "tapi-common"
@@ -290,7 +290,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/total-size:
+  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/total-size/:
     get:
       tags:
       - "tapi-common"
@@ -310,7 +310,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/name:
+  /data/tapi-common:context/service-interface-point={uuid}/name/:
     post:
       tags:
       - "tapi-common"
@@ -337,7 +337,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/service-interface-point={uuid}/name={value-name}:
+  /data/tapi-common:context/service-interface-point={uuid}/name={value-name}/:
     get:
       tags:
       - "tapi-common"
@@ -417,7 +417,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity:
+  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/:
     get:
       tags:
       - "tapi-common"
@@ -437,7 +437,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/total-size:
+  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/total-size/:
     get:
       tags:
       - "tapi-common"
@@ -457,7 +457,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-admin-context:
+  /data/tapi-common:context/tapi-streaming:stream-admin-context/:
     get:
       tags:
       - "tapi-streaming"
@@ -520,7 +520,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-streaming:stream-admin-context/name:
+  /data/tapi-common:context/tapi-streaming:stream-admin-context/name/:
     post:
       tags:
       - "tapi-streaming"
@@ -542,7 +542,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/tapi-streaming:stream-admin-context/name={value-name}:
+  /data/tapi-common:context/tapi-streaming:stream-admin-context/name={value-name}/:
     get:
       tags:
       - "tapi-streaming"
@@ -607,7 +607,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-streaming:stream-admin-context/stream-monitor={uuid}:
+  /data/tapi-common:context/tapi-streaming:stream-admin-context/stream-monitor={uuid}/:
     get:
       tags:
       - "tapi-streaming"
@@ -626,7 +626,7 @@ paths:
             $ref: "#/definitions/tapi.streaming.StreamMonitorWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-admin-context/stream-monitor={uuid}/available-stream:
+  /data/tapi-common:context/tapi-streaming:stream-admin-context/stream-monitor={uuid}/available-stream/:
     get:
       tags:
       - "tapi-streaming"
@@ -645,7 +645,7 @@ paths:
             $ref: "#/definitions/tapi.streaming.AvailableStreamRefWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-admin-context/stream-monitor={uuid}/name={value-name}:
+  /data/tapi-common:context/tapi-streaming:stream-admin-context/stream-monitor={uuid}/name={value-name}/:
     get:
       tags:
       - "tapi-streaming"
@@ -671,7 +671,7 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-context:
+  /data/tapi-common:context/tapi-streaming:stream-context/:
     get:
       tags:
       - "tapi-streaming"
@@ -734,7 +734,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-streaming:stream-context/available-stream={uuid}:
+  /data/tapi-common:context/tapi-streaming:stream-context/available-stream={uuid}/:
     get:
       tags:
       - "tapi-streaming"
@@ -753,7 +753,7 @@ paths:
             $ref: "#/definitions/tapi.streaming.AvailableStreamWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-context/available-stream={uuid}/name={value-name}:
+  /data/tapi-common:context/tapi-streaming:stream-context/available-stream={uuid}/name={value-name}/:
     get:
       tags:
       - "tapi-streaming"
@@ -779,7 +779,7 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-context/available-stream={uuid}/supported-stream-type:
+  /data/tapi-common:context/tapi-streaming:stream-context/available-stream={uuid}/supported-stream-type/:
     get:
       tags:
       - "tapi-streaming"
@@ -798,7 +798,7 @@ paths:
             $ref: "#/definitions/tapi.streaming.SupportedStreamTypeRefWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-context/supported-stream-type={uuid}:
+  /data/tapi-common:context/tapi-streaming:stream-context/supported-stream-type={uuid}/:
     get:
       tags:
       - "tapi-streaming"
@@ -817,7 +817,7 @@ paths:
             $ref: "#/definitions/tapi.streaming.streamcontext.SupportedStreamTypeWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-context/supported-stream-type={uuid}/compacted-log-details:
+  /data/tapi-common:context/tapi-streaming:stream-context/supported-stream-type={uuid}/compacted-log-details/:
     get:
       tags:
       - "tapi-streaming"
@@ -836,7 +836,7 @@ paths:
             $ref: "#/definitions/tapi.streaming.CompactedLogDetailsWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-context/supported-stream-type={uuid}/connection-protocol-details:
+  /data/tapi-common:context/tapi-streaming:stream-context/supported-stream-type={uuid}/connection-protocol-details/:
     get:
       tags:
       - "tapi-streaming"
@@ -855,7 +855,7 @@ paths:
             $ref: "#/definitions/tapi.streaming.ConnectionProtocolDetailsWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-context/supported-stream-type={uuid}/name={value-name}:
+  /data/tapi-common:context/tapi-streaming:stream-context/supported-stream-type={uuid}/name={value-name}/:
     get:
       tags:
       - "tapi-streaming"
@@ -881,7 +881,7 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
-  /operations/tapi-common:get-service-interface-point-details:
+  /operations/tapi-common:get-service-interface-point-details/:
     post:
       tags:
       - "tapi-common"
@@ -904,7 +904,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-common:get-service-interface-point-list:
+  /operations/tapi-common:get-service-interface-point-list/:
     post:
       tags:
       - "tapi-common"
@@ -918,7 +918,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-common:update-service-interface-point:
+  /operations/tapi-common:update-service-interface-point/:
     post:
       tags:
       - "tapi-common"
@@ -937,7 +937,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-streaming:connect-to-stream:
+  /operations/tapi-streaming:connect-to-stream/:
     post:
       tags:
       - "tapi-streaming"
@@ -956,7 +956,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-streaming:get-available-stream-connection-details:
+  /operations/tapi-streaming:get-available-stream-connection-details/:
     post:
       tags:
       - "tapi-streaming"
@@ -970,7 +970,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-streaming:get-supported-stream-connection-types:
+  /operations/tapi-streaming:get-supported-stream-connection-types/:
     post:
       tags:
       - "tapi-streaming"
@@ -1315,18 +1315,18 @@ definitions:
   tapi.streaming.ContextAugmentation1:
     type: "object"
     properties:
-      stream-context:
-        description: "Augments the base TAPI Context with StreamContext model."
-        $ref: "#/definitions/tapi.streaming.context.StreamContext"
+      stream-admin-context:
+        description: "Augments the base TAPI Context with StreamAdminContext model."
+        $ref: "#/definitions/tapi.streaming.StreamAdminContext"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
   tapi.streaming.ContextAugmentation2:
     type: "object"
     properties:
-      stream-admin-context:
-        description: "Augments the base TAPI Context with StreamAdminContext model."
-        $ref: "#/definitions/tapi.streaming.StreamAdminContext"
+      stream-context:
+        description: "Augments the base TAPI Context with StreamContext model."
+        $ref: "#/definitions/tapi.streaming.context.StreamContext"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
